# OCRmyPDF

./: .coveragerc  .dockerignore  .git_archival.txt  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CLAUDE.md  COPYRIGHT.md  Dockerfile  Dockerfile.polyglot  Dockerfile.tess4  LICENSE.rst  MANIFEST.in  OCRmyPDF.sh  PDFA_def.ps  README.md  README.rst  README_ZH.md  RELEASE_NOTES.md  RELEASE_NOTES.rst  REUSE.toml  ROADMAP.md  azure-pipelines.yml  build-appimage.sh  dev_requirements.txt  docker-wrapper.sh  gui.py  hocrTransform.py  ocrmypdf.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  snapcraft.yaml  tasks.py  test_requirements.txt  (+1 more)
.docker/: Dockerfile  Dockerfile.alpine  Dockerfile.polyglot  Dockerfile.tess4  Dockerfile.ubuntu24  alpine.dockerfile  docker-compose.test.yml  polyglot.docker  tess4.docker  ubuntu-arm32v7.dockerfile  webapp.dockerfile  webservice.dockerfile  webservice.py
.docker/arm32v7/: ubuntu-arm32v7.dockerfile
.github/: FUNDING.yml  ISSUE_TEMPLATE  dependabot.yml  issue_template.md
.github/ISSUE_TEMPLATE/: 1-bug-report-general.yml  1-general-issues.md  2-problem-with-a-specific-input-file.md  2-problem-with-specific-file.yml  3-app.yml  3-feature_request.md  4-feature-request.yml  bug-report-general.yml  bug_report.md  feature_request.md  general-issues.md  problem-with-specific-file.md
.github/workflows/: build.yml  buildx-latest.yml  release.yml  run.yml  triage.yml
.reuse/: dep5
.travis/: Brewfile  autobrew.py  linux_before_install.sh  null_deploy.sh  osx_before_deploy.sh  osx_before_install.sh  osx_brew.sh
appimage/: AppRun.sh
debian/: copyright
docs/: advanced.md  advanced.rst  api.md  api.rst  apiref.md  apiref.rst  batch.md  batch.rst  cloud.md  cloud.rst  conf.py  contributing.md  contributing.rst  cookbook.md  cookbook.rst  design_notes.md  design_notes.rst  docker.md  docker.rst  errors.md  errors.rst  index.md  index.rst  installation.md  installation.rst  introduction.md  introduction.rst  jbig2.md  jbig2.rst  languages.md  languages.rst  maintainers.md  maintainers.rst  optimizer.md  optimizer.rst  pdfsecurity.md  pdfsecurity.rst  performance.md  performance.rst  plugins.md  (+5 more)
docs/releasenotes/: version17.md
jhove/: LICENSE  README  RELEASENOTES  build.xml  gdump  gdump.bat  j2dump.bat  jdump.bat  jhove.bat  jhove.tmpl  jhove_bat.tmpl  pdump.bat  userhome  userhome.bat
jhove/classes/: ADump.java  GDump.java  J2Dump.java  JDump.java  Jhove.java  JhoveView.java  PDump.java  TDump.java  UserHome.java  WDump.java  build.xml  overview.html
jhove/conf/: jhove-byteoffset=true.conf  jhove-withTextMD.conf  jhove.conf  jhove.conf.old
jhove/doc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list  packages.html  serialized-form.html
misc/: _webservice.py  batch.py  bisect_pdf.py  completions.bash  docker-compose.example.yaml  docker-compose.example.yml  example_plugin.py  ocrmypdf  ocrmypdf_compare.py  pdf_compare.py  pdf_text_diff.py  synology.py  watcher  watcher.py  webservice.py
misc/completion/: ocrmypdf.bash  ocrmypdf.fish
misc/flatpak/: io.ocrmypdf.ocrmypdf.metainfo.xml
misc/media/: logo.afdesign
misc/screencast/: README.md  demo.cast
ocrmypdf/: __init__.py  __main__.py  _unicodefun.py  exceptions.py  ghostscript.py  helpers.py  hocrtransform.py  lept.py  leptonica.py  main.py  pageinfo.py  pdfa.py  pdfinfo.py  pipeline.py  qpdf.py  tesseract.py  unpaper.py
ocrmypdf/data/: sRGB_IEC61966-2-1_black_scaled.icc
ocrmypdf/exe/: __init__.py  ghostscript.py  qpdf.py  tesseract.py  unpaper.py
ocrmypdf/exec/: __init__.py  ghostscript.py  qpdf.py  tesseract.py  unpaper.py
ocrmypdf/jhove/: COPYING  configure.pl  j2dump  jdump  jhove  md5.pl  packagejhove.sh  pdump
ocrmypdf/lib/: __init__.py  compile_leptonica.py
ocrmypdf/test/: test_pageinfo.py
requirements/: dev.txt  main.txt  test.txt  watcher.txt  webservice.txt
scripts/: generate_glyphless_font.py
share/: etc-apt-sources.list
src/: config.sh  hocrTransform.py  hocrtransform.py  leptonica.py  ocrPage.sh  ocrmypdf.py  ocrpage.py  pageinfo.py  pdfa.py  tesseract.py
src/ocrmypdf/: RELEASE.md  __init__.py  __main__.py  _annots.py  _concurrent.py  _defaults.py  _filters.py  _graft.py  _jobcontext.py  _lambda_plugin.py  _logging.py  _metadata.py  _optimize.py  _options.py  _pageboxes.py  _pipeline.py  _pipeline_simple.py  _plugin_manager.py  _plugin_registry.py  _plugins.py  _pluginspec.py  _progressbar.py  _ruffus.py  _stdoutprotect.py  _sync.py  _unicodefun.py  _validation.py  _validation_coordinator.py  _version.py  _weave.py  api.py  cli.py  example.py  exceptions.py  filters.py  helpers.py  hocr.py  hocrtransform.py  imageops.py  languages.py  (+11 more)
src/test/: OCRmyPDF_severaltimes.sh  README.md
tess-cfg/: README.md  no_ligature
tesseract_cfg/: README.md  no_ligature
test/: OCRmyPDF_severaltimes.sh  test-appimage.sh
tests/: __init__.py  conftest.py  replace_ghostscript_nopdfa.py  test_acroform.py  test_annots.py  test_api.py  test_check_pdf.py  test_completion.py  test_concurrency.py  test_deterministic_id.py  test_filters.py  test_fpdf_renderer.py  test_ghostscript.py  test_graft.py  test_gvision.py  test_helpers.py  test_hocr_parser.py  test_hocrtransform.py  test_image_input.py  test_imageops.py  test_json_serialization.py  test_lept.py  test_logging.py  test_main.py  test_metadata.py  test_multi_font_manager.py  test_multilingual_direct.py  test_multiprocessing.py  test_null_ocr_engine.py  test_ocr_element.py  test_ocr_engine_interface.py  test_ocr_engine_selection.py  test_optimize.py  test_page_boxes.py  test_page_numbers.py  test_page_reducing.py  test_pageinfo.py  test_pdf_renderer.py  test_pdfa.py  test_pdfinfo.py  (+24 more)
tests/cache/: manifest.json  manifest.jsonl
tests/plugins/: gs_feature_elision.py  gs_pdfa_failure.py  gs_raster_failure.py  gs_raster_soft_error.py  gs_render_failure.py  gs_render_soft_error.py  (+8 more)
(+946 files in other folders)
